Revert back to normal